✨ admin get product detail
