# docs/swagger.yaml
@@ -523,6 +523,37 @@ paths:
       summary: Delete a product
       tags:
       - Admin Product
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a detail of products with seller
+      parameters:
+      - description: Order ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of products with seller details
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/admin.GetProductResponse'
+              type: object
+        "400":
+          description: Invalid query parameters
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get Product Detail
+      tags:
+      - Admin Product
     put:
       consumes:
       - multipart/form-data
